# collector

./: README.md  collector.cabal  stack.yaml
src/: Logic.hs  Main.hs  World.hs
