name:                collector
version:             0.1.0.0
synopsis:            A game where you collect tokens.
description:         Please see README.md
homepage:            http://github.com/lambda-112345/collector
license:             GPL3
license-file:        LICENSE
author:              Taran Lynn
maintainer:          taranlynn0@gmail.com
copyright:           2015 Taran Lynn
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable collector
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Logic, World
  build-depends:       base, ncurses, netwire, containers, random, transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lambda-11235/collector
